<resources>
    <string name="app_name">List Item</string>
    <string name="avail_qty">Tồn kho hiện tại</string>
    <string name="product_code">Mã sản phẩm</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="product_price">Giá</string>
    <string name="number_order">số lượng đặt</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
</resources>
